# pixachu

./: .gitignore  .pre-commit-config.yaml  README.md  pixachu.yml  pyproject.toml
.cursor/rules/: format-rule.mdc
pixachu/: __init__.py
pixachu/_globals/: __init__.py  logging.py  settings.py
pixachu/_model/: __init__.py  auto.py  config.py  model.py  processor.py
pixachu/cli/: post_install.py  train_pixachu.py
pixachu/model/: __init__.py  _auto.py  _config.py  _model.py
pixachu/trainer/: _trainer.py
